Fix checkbox/label alignment in firefox in search options.

--- a/app/assets/stylesheets/sencha_base/style.scss
+++ b/app/assets/stylesheets/sencha_base/style.scss
@@ -1361,7 +1361,7 @@ a[data-behaviour='toggle-filter-tab'] {
     cursor: pointer;
     position: absolute;
     left: 22px;
-    top: 1px;
+    top: 2px;
   }
   
   .filter-option-quantity {
@@ -1389,6 +1389,17 @@ a[data-behaviour='toggle-filter-tab'] {
     position: absolute;
     left: 3px;
     top: 3px;
+  }
+}
+
+// Firefox - decided to use this workaround instead of investing more time in 
+// solving this issue.
+@-moz-document url-prefix() {
+  .filter-option-name {
+    label {
+      left: 24px;
+      top: 3px;
+    }
   }
 }
 
